# MultiQueue

./: CMakeLists.txt  IConsumer.h  IProducer.h  IQueuePolicyFactory.h  IQueueProcessingPolicy.h  IUnsubscriptable.h  QueueExceptions.h  QueueHandler.h  QueueManager.h  QueueMultiPolicy.h  QueueMultiPolicyFactory.h  QueueReplacePolicy.h  QueueReplacePolicyFactory.h  README.md  dockerfile  main.cpp
tests/: cases.h  testexceptions.cpp  testexceptions.h  testmultipolicy.cpp  testmultipolicy.h  testreplacepolicy.cpp  testreplacepolicy.h  testsimple.cpp  testsimple.h
